# G1_LoopieEngine_Scripting

./: CMakeLists.txt  CMakePresets.json  README.md
Assets/Scripts/: Loopie.Core.deps.json  TestScript.cs
Loopie/: CMakeLists.txt
Loopie/src/Loopie/Components/: Camera.cpp  Camera.h  Component.cpp  Component.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  ScriptComponent.cpp  ScriptComponent.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h
Loopie/src/Loopie/Core/: Application.cpp  Application.h  InputEventManager.cpp  InputEventManager.h  Window.cpp  Window.h
Loopie/src/Loopie/Files/: DirectoryManager.cpp  FileDialog.cpp  FileDialog.h  Json.cpp  Json.h  MeshImporter.cpp  MeshImporter.h  OrbitalCamera.cpp  OrbitalCamera.h
Loopie/src/Loopie/Importers/: MaterialImporter.cpp  MaterialImporter.h  MeshImporter.cpp  ScriptImporter.cpp  ScriptImporter.h  TextureImporter.cpp  TextureImporter.h
Loopie/src/Loopie/Math/: Octree.cpp  Octree.h  Ray.cpp  Ray.h
Loopie/src/Loopie/Project/: Project.cpp  Project.h
Loopie/src/Loopie/Render/: BufferLayout.h  Gizmo.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureBuffer.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.h
Loopie/src/Loopie/Resources/: AssetRegistry.cpp  AssetRegistry.h  MetadataRegistry.h  Resource.h  ResourceDatabase.cpp  ResourceDatabase.h  ResourceManager.cpp  ResourceManager.h  ScriptResource.h
Loopie/src/Loopie/Scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
Loopie/src/Loopie/Scripting/: ScriptCompiler.cpp  ScriptGlue.cpp  ScriptGlue.h  ScriptingModule.cpp  ScriptingModule.h  TestScript.cs
Loopie/src/Loopie/_ExternalsCompat/: nfd_sdl3.h
LoopieEditor/: CMakeLists.txt  imgui.ini
LoopieEditor/assets/Scripts/: player.cs
LoopieEditor/assets/models/: ScriptTank.fbx  TankFinal.fbx  TankRenderers.fbx
LoopieEditor/assets/models/Primitives/: cone.fbx  cube.fbx  cylinder.fbx  sphere.fbx
LoopieEditor/assets/scripts/: test.cs
LoopieEditor/assets/shaders/: CorrectShader.shader  DefaultShader.shader  SelectionOutline.shader
LoopieEditor/src/: EditorApplication.cpp  EditorModule.cpp  EditorModule.h  ProjectSetupModule.cpp  ProjectSetupModule.h
LoopieEditor/src/Editor/Interfaces/ProjectSetup/: ProjectSetupInterface.cpp  ProjectSetupInterface.h
LoopieEditor/src/Editor/Interfaces/Workspace/: AssetsExplorerInterface.cpp  AssetsExplorerInterface.h  GameInterface.cpp  GameInterface.h  HierarchyInterface.h  InspectorInterface.cpp  InspectorInterface.h  SceneInterface.cpp  SceneInterface.h  ScripEditorInterface.h  ScriptEditorInterface.cpp  TextEditorWindow.cpp  TextEditorWindow.h  TopBarInterface.cpp
LoopieEditor/src/Editor/Modules/: EditorModule.cpp  EditorModule.h
LoopieEditor/src/Editor/Others/: OrbitalCamera.cpp
LoopieEditor/src/ImGuiHelpers/: ImGuiHelpers.cpp  ImGuiHelpers.h
LoopieEditor/src/Interfaces/: Interface.h  ProjectSetupInterface.cpp  ProjectSetupInterface.h
LoopieEditor/src/Interfaces/Editor/: AssetsExplorerInterface.cpp  AssetsExplorerInterface.h  ConsoleInterface.h  EditorMenuInterface.cpp  EditorMenuInterface.h  GameInterface.cpp  GameInterface.h  HierarchyInterface.cpp  HierarchyInterface.h  InspectorInterface.cpp  InspectorInterface.h  SceneInterface.cpp  SceneInterface.h
LoopieEditor/src/Interfaces/ProjectSetup/: ProjectSetupInterface.cpp  ProjectSetupInterface.h
LoopieEditor/src/Others/: OrbitalCamera.cpp
LoopieScriptCore/: Bullet.cs  CMakeLists.txt  Entity.cs  Helper.cs  Input.cs  InternalCalls.cs  LoopieScript.cs  LoopieScriptProject.csproj  NewScript.cs  NewScript_3.cs  TankController.cs  TestScript.cs
Projects/Scripting Project/A/: project.config
(+22 files in other folders)
